...
    <string name="could_not_upload_report">Could Not Upload Report</string>
    <string name="could_not_upload_report_description">Unable to upload the report for future use. Please try again or reach out to support for assistance.</string>
    <string name="click_me_to_create_account">Click me to create account</string>
    <string name="create_account">Create Account</string>
    <string name="create_player">Create Player</string>
...
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="email_in_use">Email in use</string>
    <string name="email_in_use_description">This email is already in use on Track Your Shot. Please use a different email address.</string>
...
    <string name="email_is_not_in_correct_format_please_enter_email_in_correct_format">Email is not in correct format. Please enter email in correct format</string>
    <string name="email_is_required_please_enter_a_email_to_create_a_account">Email is required. Please enter a email to create a account.</string>
    <string name="email_is_required_please_enter_a_email_to_login_to_existing_account">Email is required. Please enter a email to login to existing account.</string>
    <string name="email_is_required_please_enter_a_email_to_reset_password_for_existing_account">Email is required. Please enter a email to reset password for existing account.</string>
    <string name="enabled_permissions">Enabled Permissions</string>
...
    <string name="edit_player">Edit Player</string>
    <string name="empty" />
    <string name="empty_field">Empty Field</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="empty_fields_description">Required information is missing to continue creating your account. Please provide the necessary details.</string>
...
    <string name="both">Both</string>
    <string name="having_trouble_creating_your_account_please_try_again">Having trouble creating your account. Please try again</string>
    <string name="having_trouble_logging_into_your_account_please_try_again_and_or_ensure_credentials_exist_and_are_valid">Having trouble logging into your account. Please try again and or ensure credentials exist and are valid.</string>
    <string name="having_trouble_resetting_password_for_this_account_please_try_again_and_or_ensure_credentials_exist_and_are_valid">Having trouble resetting password for this account. Please try again and or ensure credentials exist and are valid.</string>
    <string name="hint_add_new_player">Tap the "+" icon in the right-side toolbar to add a new player</string>
...
    <string name="last_name">Last Name</string>
    <string name="leaving_the_app_will_result_you_in_not_finishing_the_account_creation_process_description">Leaving the app will result you in not finishing the account creation process. You will not be able to continue until you verify your email. If you verify your email and then come back to the app, you can continue to create your account.</string>
    <string name="login">Login</string>
    <string name="login_icon_description">This is a login image for the login screen</string>
    <string name="logout">Logout</string>
...
    <string name="selecting_a_shot">Selecting A Shot</string>
    <string name="select_date">Select Date</string>
    <string name="password">Password</string>
    <string name="password_helper_text">Password must be at least 8 characters long and include: one lowercase letter (a–z), one uppercase letter (A–Z), one number (0–9), and one special character (e.g., @, $, !, %, *).</string>
    <string name="password_required">Password*</string>
    <string name="password_is_not_in_correct_format_please_enter_password_in_correct_format">Password is not in correct format. Please enter password in correct format</string>
    <string name="password_is_required_please_enter_a_password_to_create_a_account">Password is required. Please enter a password to create a account.</string>
    <string name="password_is_required_please_enter_a_password_to_login_to_existing_account">Password is required. Please enter a password to login to existing account.</string>
    <string name="pending_shots">Pending Shots</string>
    <string name="permissions">Permissions</string>
...
    <string name="players_last_name_empty_description">The player\'s last name is missing. Kindly provide a first name to proceed.</string>
    <string name="position">Position</string>
    <string name="proceed_with_your_account">Proceed With Your Account</string>
    <string name="read_external_storage_permission_explanation">We ask for read external storage permission so users can select an image from their gallery when creating or editing a player profile. This permission allows the app to access images stored on the device\'s external storage, enabling users to choose and associate images with their player profiles. Without this permission, users would 
    <string name="read_external_storage_permission">Read External Storage Permission</string>
...
    <string name="this_email_is_already_used_for_another_account_please_enter_a_new_email">This email is already used for another account. Please enter a new email.</string>
    <string name="this_username_is_already_used_for_another_account_please_enter_a_new_username">This username is already used for another account. Please enter a new username.</string>
    <string name="track_your_shot">Track Your Shot</string>
    <string name="try_again">Try Again</string>
    <string name="username">Username</string>
...
    <string name="unable_to_delete_player_please_contact_support">Unable to delete player. Please contact support.</string>
    <string name="unable_to_delete_shot">Unable To Delete Shot</string>
    <string name="unable_to_login_to_account">Unable to login to account</string>
    <string name="unable_to_reset_password">Unable to reset password</string>
    <string name="unable_to_set_new_username">Unable to set new username</string>
...
